--- a/docker/Dockerfile.ponto
+++ b/docker/Dockerfile.ponto
@@ -2,6 +2,7 @@
 FROM golang:1.24.1 AS builder
 WORKDIR /app
 COPY . .
+ENV CGO_ENABLED=0
 RUN go build -o ponto ./cmd/ponto/main.go
 
 # Etapa de execução
